--- a/src/app/car-owner-hub/car-owner-hub.component.html
+++ b/src/app/car-owner-hub/car-owner-hub.component.html
@@ -20,7 +20,7 @@
       <table class="table table-hover">
         <thead class="thead-light">
           <tr>
-            <th scope="col">#</th>
+            <th scope="col">VIN</th>
             <th scope="col">Model
               <i class="fas fa-car ml-1"></i>
             </th>
@@ -104,7 +104,7 @@
 
       <div class="row justify-content-end">
         <div class="col-2 mt-4">
-          <button routerLink="/car-owner/car-new" class="btn btn-outline-success">Add new vehicle</button>
+          <button routerLink="/car-owner/car-new" class="btn btn-outline-success">Register Vehicle</button>
         </div>
       </div>
     </div>
