--- a/src/app/police-hub-impound/police-hub-impound.component.html
+++ b/src/app/police-hub-impound/police-hub-impound.component.html
@@ -22,7 +22,7 @@
           </div>
           <div class="form-group">
             <label for="exampleInputMake1">Make</label>
-            <input type="text" class="form-control form-control-lg" id="exampleInputMake1" aria-describedby="makeHelp" placeholder="Enter the vehicle`s Make">
+            <input type="text" class="form-control form-control-lg" id="exampleInputMake1" aria-describedby="makeHelp" placeholder="Enter the vehicle`s make">
           </div>
           <div class="form-group">
             <label for="exampleInputModel1">Model</label>
