--- a/src/app/manufaturer-hub/manufaturer-hub.component.html
+++ b/src/app/manufaturer-hub/manufaturer-hub.component.html
@@ -16,7 +16,7 @@
       <h5 class="card-title my-5">Manufacturer Options</h5>
       <div class="row justify-content-center mb-5">
         <div class="col-lg-3 col-12 text-center">
-          <button routerLink="/manufacturer/new-car" class="btn btn-outline-success btn-block" style="height: 80px;">New Vehicle Request
+          <button routerLink="/manufacturer/new-car" class="btn btn-outline-success btn-block" style="height: 80px;">Register New Vehicle
             <i class="fas fa-plus-square ml-1"></i>
           </button>
         </div>
