start of simple error checking

--- a/src/app/car-owner-car-edit/car-owner-car-edit.component.html
+++ b/src/app/car-owner-car-edit/car-owner-car-edit.component.html
@@ -24,25 +24,25 @@
           </div>
           <div class="form-group">
             <label for="exampleInputMake1">Make</label>
-            <input type="text" class="form-control form-control-lg" id="exampleInputMake1" aria-describedby="makeHelp" placeholder="Enter the vehicle`s Make" value="{{myVehicle.make}}">
+            <input type="text" class="form-control form-control-lg" id="exampleInputMake1" aria-describedby="makeHelp" placeholder="Enter the vehicle's Make" value="{{myVehicle.make}}">
           </div>
           <div class="form-group">
             <label for="exampleInputModel1">Model</label>
-            <input type="text" class="form-control form-control-lg" id="exampleInputModel1" aria-describedby="modelHelp" placeholder="Enter the vehicle`s model" value="{{myVehicle.model}}">
+            <input type="text" class="form-control form-control-lg" id="exampleInputModel1" aria-describedby="modelHelp" placeholder="Enter the vehicle's model" value="{{myVehicle.model}}">
           </div>
           <div class="form-group">
             <label for="exampleInputLicense1">License</label>
-            <input type="text" class="form-control form-control-lg" id="exampleInputLicense1" aria-describedby="licenseHelp" placeholder="Enter the vehicle`s license plate" value="{{myVehicle.plate}}">
+            <input type="text" class="form-control form-control-lg" id="exampleInputLicense1" aria-describedby="licenseHelp" placeholder="Enter the vehicle's license plate" value="{{myVehicle.plate}}">
           </div>
   
           <div class="form-group">
             <label for="exampleInputColour1">Colour</label>
-            <input type="text" class="form-control form-control-lg" id="exampleInputColour1" aria-describedby="colorHelp" placeholder="Enter the vehicle`s colour" value="{{myVehicle.colour}}">
+            <input type="text" class="form-control form-control-lg" id="exampleInputColour1" aria-describedby="colorHelp" placeholder="Enter the vehicle's colour" value="{{myVehicle.colour}}">
           </div>
   
           <div class="form-group">
             <label for="exampleInputInsurance1">Insurance Transaction Number</label>
-            <input type="text" class="form-control form-control-lg" id="exampleInputInsurance1" aria-describedby="insuranceHelp" placeholder="Enter the vehicle`s insurance number" value="{{vehicleInsurance}}">
+            <input type="text" class="form-control form-control-lg" id="exampleInputInsurance1" aria-describedby="insuranceHelp" placeholder="Enter the vehicle's insurance number" value="{{vehicleInsurance}}">
           </div>
           <button routerLink="/car-owner" class="btn btn-secondary">Submit changes for approval</button>
         </form>
