--- a/src/app/car-owner-car-new/car-owner-car-new.component.html
+++ b/src/app/car-owner-car-new/car-owner-car-new.component.html
@@ -14,7 +14,7 @@
   <div class="card my-5 text-center">
     <div class="card-body">
       <h5 class="card-title mb-2 mt-5">Register a New Vehicle</h5>
-      <h6 class="card-title mb-2 mt-5">{{displayMessage}}</h6>
+      <h6 class="card-title mb-2 mt-5" *ngIf="displayMessage!='undefined'" name="statusBar">{{displayMessage}}</h6>
 
       <!-- Form -->
       <form class="w-75 mx-auto text-left">
@@ -24,20 +24,20 @@
         </div>
         <div class="form-group">
           <label for="exampleInputMake1">Make</label>
-          <input type="text" [(ngModel)]="vehicle.make" class="form-control form-control-lg" id="exampleInputMake1" aria-describedby="makeHelp" placeholder="Enter the vehicle`s Make" name="field2">
+          <input type="text" [(ngModel)]="vehicle.make" class="form-control form-control-lg" id="exampleInputMake1" aria-describedby="makeHelp" placeholder="Enter the vehicle's make" name="field2">
         </div>
         <div class="form-group">
           <label for="exampleInputModel1">Model</label>
-          <input type="text" [(ngModel)]="vehicle.model" class="form-control form-control-lg" id="exampleInputModel1" aria-describedby="modelHelp" placeholder="Enter the vehicle`s model" name="field3">
+          <input type="text" [(ngModel)]="vehicle.model" class="form-control form-control-lg" id="exampleInputModel1" aria-describedby="modelHelp" placeholder="Enter the vehicle's model" name="field3">
         </div>
         <div class="form-group">
           <label for="exampleInputLicense1">License</label>
-          <input type="text" [(ngModel)]="vehicle.plate" class="form-control form-control-lg" id="exampleInputLicense1" aria-describedby="licenseHelp" placeholder="Enter the vehicle`s license plate" name="field4">
+          <input type="text" [(ngModel)]="vehicle.plate" class="form-control form-control-lg" id="exampleInputLicense1" aria-describedby="licenseHelp" placeholder="Enter the vehicle's license plate" name="field4">
         </div>
 
         <div class="form-group">
           <label for="exampleInputColour1">Colour</label>
-          <input type="text" [(ngModel)]="vehicle.colour" class="form-control form-control-lg" id="exampleInputColour1" aria-describedby="colorHelp" placeholder="Enter the vehicle`s colour" name="field5">
+          <input type="text" [(ngModel)]="vehicle.colour" class="form-control form-control-lg" id="exampleInputColour1" aria-describedby="colorHelp" placeholder="Enter the vehicle's colour" name="field5">
         </div>
 
         <div class="form-group">
