--- a/src/app/police-hub-impound/police-hub-impound.component.html
+++ b/src/app/police-hub-impound/police-hub-impound.component.html
@@ -22,20 +22,20 @@
           </div>
           <div class="form-group">
             <label for="exampleInputMake1">Make</label>
-            <input type="text" class="form-control form-control-lg" id="exampleInputMake1" aria-describedby="makeHelp" placeholder="Enter the vehicle`s make">
+            <input type="text" class="form-control form-control-lg" id="exampleInputMake1" aria-describedby="makeHelp" placeholder="Enter the vehicle's make">
           </div>
           <div class="form-group">
             <label for="exampleInputModel1">Model</label>
-            <input type="text" class="form-control form-control-lg" id="exampleInputModel1" aria-describedby="modelHelp" placeholder="Enter the vehicle`s model">
+            <input type="text" class="form-control form-control-lg" id="exampleInputModel1" aria-describedby="modelHelp" placeholder="Enter the vehicle's model">
           </div>
           <div class="form-group">
             <label for="exampleInputLicense1">License</label>
-            <input type="text" class="form-control form-control-lg" id="exampleInputLicense1" aria-describedby="licenseHelp" placeholder="Enter the vehicle`s license plate">
+            <input type="text" class="form-control form-control-lg" id="exampleInputLicense1" aria-describedby="licenseHelp" placeholder="Enter the vehicle's license plate">
           </div>
   
           <div class="form-group">
             <label for="exampleInputColour1">Colour</label>
-            <input type="text" class="form-control form-control-lg" id="exampleInputColour1" aria-describedby="colorHelp" placeholder="Enter the vehicle`s colour">
+            <input type="text" class="form-control form-control-lg" id="exampleInputColour1" aria-describedby="colorHelp" placeholder="Enter the vehicle's colour">
           </div>
           <div class="form-group">
               <label for="exampleInputReason1">Reason for Impounding</label>
