--- a/src/app/register-page/register-page.component.html
+++ b/src/app/register-page/register-page.component.html
@@ -11,6 +11,7 @@
   <div class="card my-5 text-center">
     <div class="card-body">
       <h5 class="card-title mb-2 mt-5">Sign Up</h5>
+      <h6 class="card-title mb-2 mt-5" name="statusBar" *ngIf="displayMessage!='undefined'">{{displayMessage}}</h6>
       
       <!-- Form -->
       <form class="w-75 mx-auto text-left">
@@ -43,7 +44,7 @@
             <input type="password" class="form-control form-control-lg" id="exampleInputPassword2" placeholder="Re-enter Password">
           </div>
             
-          <button (click)="createUser(selector)" class="btn btn-primary">Submit</button>
+          <button (click)="createUser(selector)" [disabled]="selector=='undefined'" class="btn btn-primary">Submit</button>
         </form>
 
       <div class="row justify-content-end">
