--- a/src/app/car-owner-car-edit/car-owner-car-edit.component.html
+++ b/src/app/car-owner-car-edit/car-owner-car-edit.component.html
@@ -18,33 +18,33 @@
         <!-- Form -->
   
         <form class="w-75 mx-auto text-left">
-          <div class="form-group">
+          <!--<div class="form-group">
             <label for="exampleInputVIN1">VIN</label>
             <input type="text" class="form-control form-control-lg" id="exampleInputVIN1" aria-describedby="vinHelp" placeholder="Enter vin number" value="{{myVehicle.VIN}}">
-          </div>
+          </div>-->
           <div class="form-group">
             <label for="exampleInputMake1">Make</label>
-            <input type="text" class="form-control form-control-lg" id="exampleInputMake1" aria-describedby="makeHelp" placeholder="Enter the vehicle's Make" value="{{myVehicle.make}}">
+            <input type="text" class="form-control form-control-lg" id="exampleInputMake1" aria-describedby="makeHelp" placeholder="Enter the vehicle's Make" value="{{myVehicle.make}}" name="makeBox" [(ngModel)]="newVehicle.make">
           </div>
           <div class="form-group">
             <label for="exampleInputModel1">Model</label>
-            <input type="text" class="form-control form-control-lg" id="exampleInputModel1" aria-describedby="modelHelp" placeholder="Enter the vehicle's model" value="{{myVehicle.model}}">
+            <input type="text" class="form-control form-control-lg" id="exampleInputModel1" aria-describedby="modelHelp" placeholder="Enter the vehicle's model" value="{{myVehicle.model}}" name="modelBox" [(ngModel)]="newVehicle.model">
           </div>
           <div class="form-group">
             <label for="exampleInputLicense1">License</label>
-            <input type="text" class="form-control form-control-lg" id="exampleInputLicense1" aria-describedby="licenseHelp" placeholder="Enter the vehicle's license plate" value="{{myVehicle.plate}}">
+            <input type="text" class="form-control form-control-lg" id="exampleInputLicense1" aria-describedby="licenseHelp" placeholder="Enter the vehicle's license plate" value="{{myVehicle.plate}}" name="plateBox" [(ngModel)]="newVehicle.plate">
           </div>
   
           <div class="form-group">
             <label for="exampleInputColour1">Colour</label>
-            <input type="text" class="form-control form-control-lg" id="exampleInputColour1" aria-describedby="colorHelp" placeholder="Enter the vehicle's colour" value="{{myVehicle.colour}}">
+            <input type="text" class="form-control form-control-lg" id="exampleInputColour1" aria-describedby="colorHelp" placeholder="Enter the vehicle's colour" value="{{myVehicle.colour}}" name="colourBox" [(ngModel)]="newVehicle.colour">
           </div>
   
           <div class="form-group">
             <label for="exampleInputInsurance1">Insurance Transaction Number</label>
             <input type="text" class="form-control form-control-lg" id="exampleInputInsurance1" aria-describedby="insuranceHelp" placeholder="Enter the vehicle's insurance number" value="{{vehicleInsurance}}">
           </div>
-          <button routerLink="/car-owner" class="btn btn-secondary">Submit changes for approval</button>
+          <button (click)="editCar(newVehicle)" class="btn btn-secondary">Submit changes for approval</button>
         </form>
   
         <div class="row justify-content-end">
