--- a/src/app/police-hub-impound/police-hub-impound.component.css
+++ b/src/app/police-hub-impound/police-hub-impound.component.css
@@ -1,3 +1,16 @@
 h5{
     font-size: 2.5rem!important;
 }
+#button1{
+    width:200px;
+    height:50px;
+    margin-right: 10px;
+}
+#button2{
+    width:200px;
+    height:50px;
+    margin-right: 10px;
+}
+#buttonRow{
+    text-align:center;
+}
