--- a/src/app/police-hub-view-details/police-hub-view-details.component.html
+++ b/src/app/police-hub-view-details/police-hub-view-details.component.html
@@ -63,7 +63,7 @@
 
       <div class="row justify-content-end">
         <div class="col-2 mt-4">
-          <button routerLink="/police/police-view" class="btn btn-outline-info">Back to all vehicles</button>
+          <button routerLink="/police/police-view" class="btn btn-outline-info" id="button1">Back to all vehicles</button>
         </div>
       </div>
     </div>
