--- a/src/app/police-hub-view-vehicles/police-hub-view-vehicles.component.css
+++ b/src/app/police-hub-view-vehicles/police-hub-view-vehicles.component.css
@@ -2,3 +2,8 @@ h5{
     font-size: 2.5rem !important;
     text-align: center !important;
 }
+#button1{
+    width:125px;
+    height:50px;
+    float:right;
+}
