--- a/src/app/car-owner-car-edit/car-owner-car-edit.component.html
+++ b/src/app/car-owner-car-edit/car-owner-car-edit.component.html
@@ -14,30 +14,33 @@
     <div class="card my-5 text-center">
       <div class="card-body">
         <h5 class="card-title mb-2 mt-5">Edit Vehicle VIN#{{vinNumber}}</h5>
-  
+        <div *ngIf="displayMessage!='undefined'" class="alert alert-warning w-75 mx-auto" role="alert">
+            {{displayMessage}}
+          </div>
+        
         <!-- Form -->
   
-        <form class="w-75 mx-auto text-left">
+        <form *ngIf="myVehicle" class="w-75 mx-auto text-left">
           <!--<div class="form-group">
             <label for="exampleInputVIN1">VIN</label>
             <input type="text" class="form-control form-control-lg" id="exampleInputVIN1" aria-describedby="vinHelp" placeholder="Enter vin number" value="{{myVehicle.VIN}}">
           </div>-->
           <div class="form-group">
             <label for="exampleInputMake1">Make</label>
-            <input type="text" class="form-control form-control-lg" id="exampleInputMake1" aria-describedby="makeHelp" placeholder="Enter the vehicle's Make" value="{{myVehicle.make}}" name="makeBox" [(ngModel)]="newVehicle.make">
+            <input type="text" class="form-control form-control-lg" id="exampleInputMake1" aria-describedby="makeHelp" placeholder="Enter the vehicle's Make" name="makeBox" [(ngModel)]="myVehicle.make">
           </div>
           <div class="form-group">
             <label for="exampleInputModel1">Model</label>
-            <input type="text" class="form-control form-control-lg" id="exampleInputModel1" aria-describedby="modelHelp" placeholder="Enter the vehicle's model" value="{{myVehicle.model}}" name="modelBox" [(ngModel)]="newVehicle.model">
+            <input type="text" class="form-control form-control-lg" id="exampleInputModel1" aria-describedby="modelHelp" placeholder="Enter the vehicle's model" name="modelBox" [(ngModel)]="myVehicle.model">
           </div>
           <div class="form-group">
             <label for="exampleInputLicense1">License</label>
-            <input type="text" class="form-control form-control-lg" id="exampleInputLicense1" aria-describedby="licenseHelp" placeholder="Enter the vehicle's license plate" value="{{myVehicle.plate}}" name="plateBox" [(ngModel)]="newVehicle.plate">
+            <input type="text" class="form-control form-control-lg" id="exampleInputLicense1" aria-describedby="licenseHelp" placeholder="Enter the vehicle's license plate" name="plateBox" [(ngModel)]="myVehicle.plate">
           </div>
   
           <div class="form-group">
             <label for="exampleInputColour1">Colour</label>
-            <input type="text" class="form-control form-control-lg" id="exampleInputColour1" aria-describedby="colorHelp" placeholder="Enter the vehicle's colour" value="{{myVehicle.colour}}" name="colourBox" [(ngModel)]="newVehicle.colour">
+            <input type="text" class="form-control form-control-lg" id="exampleInputColour1" aria-describedby="colorHelp" placeholder="Enter the vehicle's colour" name="colourBox" [(ngModel)]="myVehicle.colour">
           </div>
   
           <div class="form-group">
