more ui improvements

--- a/src/app/car-owner-car-edit/car-owner-car-edit.component.html
+++ b/src/app/car-owner-car-edit/car-owner-car-edit.component.html
@@ -46,7 +46,7 @@
           </div>
 
           <div id="buttonRow">
-            <button id="button1"(click)="editCar(newVehicle)" class="btn btn-secondary">Submit changes for approval</button>
+            <button id="button1"(click)="editCar(newVehicle)" class="btn btn-primary">Submit changes for approval</button>
             <button id="button2" routerLink="/car-owner" class="btn btn-outline-primary" >Back</button>
           </div>
           
