--- a/src/app/car-owner-car-new/car-owner-car-new.component.html
+++ b/src/app/car-owner-car-new/car-owner-car-new.component.html
@@ -44,7 +44,10 @@
           <label for="exampleInputInsurance1">Insurance Transaction Number</label>
           <input type="text" class="form-control form-control-lg" id="exampleInputInsurance1" aria-describedby="insuranceHelp" placeholder="Enter the vehicle's insurance number">
         </div>
-        <button (click)="addCar(vehicle)" class="btn btn-primary">Submit</button>
+        <div id="buttonRow">
+          <button id="button1"(click)="addCar(vehicle)" class="btn btn-primary">Submit</button>
+          <button id="button2" routerLink="/car-owner" class="btn btn-outline-primary">Back</button>
+        </div>
       </form>
 
 
