--- a/src/app/car-owner-car-edit/car-owner-car-edit.component.css
+++ b/src/app/car-owner-car-edit/car-owner-car-edit.component.css
@@ -4,14 +4,14 @@ h5{
 }
 
 #button1{
-    width:225px;
+    width:200px;
     height:50px;
     margin-right: 10px;
+    text-align:center!important;
 }
 #button2{
-    width:225px;
+    width:200px;
     height:50px;
-    margin-right: 10px;
 }
 #buttonRow{
     text-align:center!important;
