--- a/src/app/car-owner-order/car-owner-order.component.css
+++ b/src/app/car-owner-order/car-owner-order.component.css
@@ -6,6 +6,7 @@ h5{
 h6{
     font-size: 1.5rem !important;
     text-align: center !important;
+    margin-top:10px
 }
 
 #button1{
@@ -16,7 +17,6 @@ h6{
 #button2{
     width:200px;
     height:50px;
-    margin-right: 10px;
 }
 #buttonRow{
     text-align:center;
