--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -10,9 +10,9 @@
 <div class="container">
   <div class="card my-5 text-center">
     <div class="card-body">
-      <h5 class="card-title mb-2 mt-5">All of your vehicle registration needs in one place.</h5>
+      <h5 class="card-title mb-2 mt-5">All Your Vehicle Info In One Place</h5>
       <p class="card-text mb-4">Register your vehicle, update registrations, check and manage the status of your vehicles and find all the information
-        and the forms you need.</p>
+        and services you need.</p>
       <div  >
       <a routerLink="/signup" class="btn btn-success btn-lg mb-5 mr-2" style="width: 151px!important;min-width: 151px!important;">
         <i class="fas fa-user-plus mr-2"></i>Sign Up</a>
