--- a/src/app/car-owner-hub/car-owner-hub.component.css
+++ b/src/app/car-owner-hub/car-owner-hub.component.css
@@ -2,3 +2,21 @@ h5{
     font-size: 2.5rem !important;
     text-align: center !important;
 }
+
+#button1{
+    width:150px;
+    height:50px;
+    margin-right: 10px;
+}
+#button2{
+    width:150px;
+    height:50px;
+}
+#buttonRow{
+    text-align:right;
+}
+p {
+    margin-left:10px;
+    font-size: 1.6rem !important;
+    text-align: left;
+}
