--- a/src/app/login-page/login-page.component.css
+++ b/src/app/login-page/login-page.component.css
@@ -1,3 +1,20 @@
 h5{
     font-size: 2.5rem!important;
 }
+
+h6{
+    margin-top:10px!important;
+}
+
+#button1{
+    width:200px;
+    height:50px;
+    margin-right:10px;
+}
+#button2{
+    width:200px;
+    height:50px;
+}
+#buttonRow{
+    text-align:center;
+}
