--- a/src/app/manufaturer-hub-new-car/manufaturer-hub-new-car.component.css
+++ b/src/app/manufaturer-hub-new-car/manufaturer-hub-new-car.component.css
@@ -8,3 +8,16 @@ h6{
     text-align: center !important;
     margin-top:10px !important;
 }
+
+#button1{
+    width:200px;
+    height:50px;
+    margin-right: 10px;
+}
+#button2{
+    width:200px;
+    height:50px;
+}
+#buttonRow{
+    text-align:center;
+}
