--- a/src/app/manufaturer-hub-stock/manufaturer-hub-stock.component.html
+++ b/src/app/manufaturer-hub-stock/manufaturer-hub-stock.component.html
@@ -53,7 +53,7 @@
   
         <div class="row justify-content-end">
           <div class="col-1 mt-4">
-            <button routerLink="/manufacturer" class="btn btn-outline-primary">Back</button>
+            <button id="button1" routerLink="/manufacturer" class="btn btn-outline-primary">Back</button>
           </div>
         </div>
       </div>
