--- a/src/app/manufaturer-hub/manufaturer-hub.component.html
+++ b/src/app/manufaturer-hub/manufaturer-hub.component.html
@@ -30,11 +30,11 @@
             <i class="fas fa-box ml-1"></i>
           </button>
         </div>
-        <div class="col-lg-3 col-12 text-center">
+        <!--<div class="col-lg-3 col-12 text-center">
           <button routerLink="/manufacturer/sell-car" class="btn btn-outline-info btn-block" style="height: 80px;">Sell Vehicle
             <i class="fas fa-user-tag ml-1"></i>
           </button>
-        </div>
+        </div>-->
       </div>
     </div>
   </div>
