--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -34,7 +34,7 @@
         </div>
         <div class="form-group">
           <label for="exampleInputPassword1">Password</label>
-          <input type="password" class="form-control form-control-lg" id="exampleInputPassword1" placeholder="Password">
+          <input [(ngModel)]="inYourPass" name="passInput" type="password" class="form-control form-control-lg" id="exampleInputPassword1" placeholder="Password">
         </div>
         
         <div id="buttonRow">
